# msse_omp_selectsort

./: CMakeLists.txt  README.md  build_image.bat  build_image.sh  interactive.bat  interactive.sh
.github/workflows/: main.yml
src/: main.cpp
